@@ -1,7 +1,5 @@
 DIST dhcdrop-0.5.tar.bz2 279218 RMD160 35dd8203f0f7be1d3a8a74a57df181d208192bfe SHA1 77520fcbd2d5fd5c6faba5577ab8713720ba873d SHA256 719f83b40a41075b9ef64269ecf03dbfc5d1ba014c0248486e668b087047ae97
-DIST dhcdrop-src-0.4.tar.bz2 246679 RMD160 cbc52dd5763bae969e6572959f9120aafecef27f SHA1 7afbb614469abea05291bdfef5af6fedfd603b45 SHA256 ceabbbbba13c68cd6d579acbf07f80f9e4bd008eb4deea966472d83abfa66d27
-EBUILD dhcdrop-0.4-r2.ebuild 695 RMD160 0f2be740c8422cbcea44852cc48855319ba773fd SHA1 aeccf55b02dfe818239fd4494789a0df4ab46012 SHA256 6c05b0a3007ec089b39bea0906cd707ff7dd041d8666116b34f43e2e0fe4d03c
 EBUILD dhcdrop-0.5.ebuild 692 RMD160 a8f20db2e2e5c863b7b4ab989721683de0208bc9 SHA1 36225dc724c6f68cb6046d4dfaf59745074df333 SHA256 ca8fcf8a5f7b5060da630286970c734a8a176e1ebcd7465718064240482ec479
 EBUILD dhcdrop-9999.ebuild 586 RMD160 8317266abb7888d226ae88507c431b64e42c6fda SHA1 08d5477facbb094fc4d53ecdd9a47e2af727c224 SHA256 604453c5a02e1dcddddb2d41a0cc1e06940429813111f1d22eaeb88ee88bdb72
-MISC ChangeLog 1068 RMD160 3656a0fa0dfbcfe14052bd4e65a4007e2fc44df3 SHA1 cdf06c658252e15e4ebba4a041c25af6d9bc0e8d SHA256 4f2fa4d572ea16e32ee38a31ff1138c7b11ce5f21bb504d9777b569b0fe78d6d
+MISC ChangeLog 1171 RMD160 4d46c428d2cbbaf3b9c96c04a6544394c5a42cdc SHA1 4cf20e7ae09cf239d3744c197dccbda03581306f SHA256 892fd40a98794ad5a3d15639d388800e3f7d9725a1a8d076e1ec216fc83878f5
 MISC metadata.xml 375 RMD160 dcad9befa09ed4915ad901ecf20b271434c5bf40 SHA1 e7bda64dcc94c82fbee18a38d1f2b0af39eb02cd SHA256 0de3d137e1882265ed639770c831fcd38506f1a1a3ba25b9bdf012fb7128dce5
